# MA-Digital-AI-Assistant

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
backend/: main.py  query_engine.py  rag_pipeline.py  run_embedd.py  run_scraper.py  utils.py
backend/data/: scraped_data.json
backend/data/faiss_index/: index.faiss  index.pkl
backend/static/: widget.html
backend/static/js/: embed.js
frontend/: index.html
